[package]
name = "rasp_pi"
version = "0.1.0"
authors = ["Areredify <misha-babenko@yandex.ru>"]
edition = "2018"
build = "build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
mqtt = { version = "0.6.0", package = "paho-mqtt" }
log = "0.4"
flexi_logger = "0.15"
sdl2 = "0.34"
system_shutdown = "3.0"
base64 = "0.12"
ndarray = "0.13"
ndarray-image = "0.2.1"
walkdir = "2.3"
image = "0.23"